2000-01-21  Kenichi OKADA <okada@opaopa.org>

	* scram-md5.el (sasl-scram-md5-client-security-info): Eval when compile.

2000-01-21  Kenichi OKADA <okada@opaopa.org>

	* digest-md5.el (TopLevel): Delete `digest-md5-nonce-count'.
	(digest-md5-build-response-value): Add `realm', `nonce' and `nonce-count'.
	(digest-md5-digest-response): Add options as RFC.
	* sasl.el (TopLevel): New variable `sasl-digest-md5-nonce-count'.
	New functions `sasl-digest-md5-digest-response' and
	`sasl-digest-md5-parse-digest-challenge'.
	* smtp.el (TopLevel): New function `smtp-auth-digest-md5'.

2000-01-06  Kenichi OKADA <okada@opaopa.org>

	* sasl.el (TopLevel): Autoload 'scram-md5' for `scram-make-security-info'.

2000-01-06  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-authenticate-type): Rename from `smtp-authenticate-type'.
	(smtp-authenticate-user): Rename from `smtp-authentication-user'.
	(smtp-authenticate-passphrase): Rename from `smtp-authentication-passphrase'.
	(smtp-authenticate-method-alist): Rename from `smtp-authenticate-method-alist)'.

2000-01-05  Katsumi Yamaoka   <yamaoka@jpl.org>

	* Makefile, mime-en.sgml, mime-ja.sgml: Update for the new CVS
	server.

2000-01-01  Kenichi OKADA <okada@opaopa.org>

	* mime-def.el (mime-library-product): Up.
	* smtp.el (smtp-authentication-method-alist): Add `digest-md5'.
	(smtp-auth-digest-md5): New function.

1999-12-21  Kenichi OKADA <okada@opaopa.org>

	* sasl.el (TopLevel): Autoload `digest-md5' and `scram-md5'.


1999-12-21  Kenichi OKADA <okada@opaopa.org>

	* SLIM: Version 1.13.5 released.

1999-12-20  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mel-b-el.el (base64-encode-region): Allow the optional second arg
	`no-line-break'.
	(base64-external-encode-region): Likewise.
	(base64-internal-encode-region): Likewise.
	(base64-encode-string): Likewise.

1999-12-13  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-aut-login): Update to new api.

1999-12-14   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* digest-md5.el