@@ -58,9 +58,8 @@
   (autoload 'base64-encode-string "base64")
   (autoload 'starttls-open-stream "starttls")
   (autoload 'starttls-negotiate "starttls")
-  (autoload 'digest-md5-parse-digest-challenge "digest-md5")
+;  (autoload 'digest-md5-parse-digest-challenge "digest-md5")
   (autoload 'digest-md5-digest-response "digest-md5")
-;  (autoload 'scram-make-security-info "scram-md5")
   (autoload 'scram-md5-make-salted-pass "scram-md5")
   (autoload 'scram-md5-parse-server-msg-1 "scram-md5")
   (autoload 'scram-md5-make-client-msg-1 "scram-md5"))
@@ -139,8 +138,9 @@
 
 (defvar sasl-digest-md5-nonce-count 1)
 
-(defun sasl-digest-md5-digest-response (username passwd 
+(defun sasl-digest-md5-digest-response (digest-challenge username passwd
 						 serv-type host &optional realm)
+  (digest-md5-parse-digest-challenge digest-challenge)
   (digest-md5-digest-response
    username
    (or realm (digest-md5-challenge 'realm)) ;; need to check.
@@ -150,9 +150,6 @@
    sasl-digest-md5-nonce-count
    (digest-md5-digest-uri serv-type host) ;; MX host
    ))
-
-(defun sasl-digest-md5-parse-digest-challenge (digest-challenge)
-  (digest-md5-parse-digest-challenge digest-challenge))
 
 (provide 'sasl)
 
